--- a/intranet/htdocs/intranet-tmpl/includes/partials/modificar_value_input.tmpl
+++ b/intranet/htdocs/intranet-tmpl/includes/partials/modificar_value_input.tmpl
@@ -3,10 +3,9 @@
     <form class="form-horizontal" onsubmit="return false">
         <fieldset>
         <legend>[% "Modificar Preferencia:" | i18n %]</legend>
-        
-        
+
          <div class="control-group">
-                    <label for="unique_modify_value">[% 'Formato de Inventario para ' | i18n %] [% tipo_doc %]</label>
+                    <h6>[% 'Formato de Inventario para ' | i18n %] [% tipo_doc %]</h6>
                     <div class="controls">
                         <input id="unique_modify_value" type="text" placeholder="[% 'SIN FORMATO' | i18n %]" value="[% value %]" onkeypress="searchKeyPress();" />
 	                    <input type="hidden" id="edit" name="edit" value="1" />
