--- a/opac/htdocs/opac-tmpl/opac-auth.tmpl
+++ b/opac/htdocs/opac-tmpl/opac-auth.tmpl
@@ -31,6 +31,7 @@
     </div>
 </noscript>
 [% IF mensaje %]
+<!--  <div id="mensajes" class="alert pagination-centered">[% mensaje %] </div>-->
   <div class='tableMsgUser'><font class='fontMsgUser'><b><div id='mensajes' class="mensajes_informacion auth_info">[% mensaje %]</div></b></font></div>
 [% END %]
 
