UI - nuevo login en INTRA

--- a/intranet/htdocs/intranet-tmpl/auth.tmpl
+++ b/intranet/htdocs/intranet-tmpl/auth.tmpl
@@ -1,49 +1,53 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-
+<!doctype html>
 <html>
-
 <head>
-<title>Meran::UNLP</title>
-<link rel="stylesheet" type="text/css" href="[% temas %]/[% tema %]/includes/login_screen.css">
-<script type="text/javascript">
-    var URL_PREFIX  = '[% url_prefix %]';
-</script>
-<script type="text/javascript" src="/includes/jquery/jquery-min.js"></script>
-<script type="text/javascript" src="/includes/util-min.js"></script>
-<script type="text/javascript" src="/includes/md5-min.js"></script>
-<script type="text/javascript" src="/includes/sha1-min.js"></script>
-
-<script type="text/javascript">
-	 var RecaptchaOptions = {
-	 };
-</script>
-
-
-<script type="text/javascript">
-    function enviar(){
-        [% IF plainPassword == 0 %]
-            var nroRandom   = [% nroRandom %];
-            var hash        = b64_sha256(b64_sha256(b64_md5($("#password_plain").val()))+nroRandom);
-            $("#password").val(hash);
-        [% ELSE %]
-            $("#password").val($("#password_plain").val());
-        [% END %]
-        var username    = $.trim($("#username").val());
-        $("#userid").val(username);
-        $("#datosAEnviar").submit();
-    }
-
-
-    $(document).ready(function() {
-        //onEnter con foco en input, ejecuta la busqueda
-          onEnter("username",enviar);
-          onEnter("password_plain",enviar);
-          onEnter("recaptcha_response_field",enviar);
-          $('#username').focus();
-    });
-
-</script>
-
+	<title>Meran::UNLP</title>
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	
+	
+	
+	<link rel="stylesheet" type="text/css" href="[% temas %]/[% tema %]/includes/intranet.css">
+	<script type="text/javascript">
+	    var URL_PREFIX  = '[% url_prefix %]';
+	</script>
+	[% INCLUDE "BootstrapToolkit.inc" %]
+	<script type="text/javascript" src="/includes/util-min.js"></script>
+	<script type="text/javascript" src="/includes/md5-min.js"></script>
+	<script type="text/javascript" src="/includes/sha1-min.js"></script>
+	
+	<script type="text/javascript">
+		 var RecaptchaOptions = {
+		 };
+	</script>
+	
+	
+	<script type="text/javascript">
+	    function enviar(){
+	        [% IF plainPassword == 0 %]
+	            var nroRandom   = [% nroRandom %];
+	            var hash        = b64_sha256(b64_sha256(b64_md5($("#password_plain").val()))+nroRandom);
+	            $("#password").val(hash);
+	        [% ELSE %]
+	            $("#password").val($("#password_plain").val());
+	        [% END %]
+	        var username    = $.trim($("#username").val());
+	        $("#userid").val(username);
+	        $("#datosAEnviar").submit();
+	    }
+	
+	
+	    $(document).ready(function() {
+	        //onEnter con foco en input, ejecuta la busqueda
+	          onEnter("username",enviar);
+	          onEnter("password_plain",enviar);
+	          onEnter("recaptcha_response_field",enviar);
+	          $('#username').focus();
+	    });
+	
+	</script>
+	
 </head>
 <body>
 <noscript>
@@ -53,32 +57,39 @@
         </font>
     </div>
 </noscript>
-[% IF mensaje %]
-	<div class="alert [% class_mensaje %]">
-	    <strong>[[% 'Informaci&oacute;n' | i18n %]]</strong> [% mensaje %]
-	</div>
-[% END %]
-<div style="padding-top: 15%; height: 100%;" >
-        
-        <div id="login">
-            <div id="contenido_login">
-                <div class="entry">     
-                        <label for="username" class="login">[% 'Identificaci&oacute;n:' | i18n %]</label>
-                        <input size=15  name="username" id="username" >
-                </div>
-                <div class="entry">
-                        <label for="password_plain" class="login">[% 'Contrase&ntilde;a:' | i18n %]</label>
-                        <input  size=15 type="password" name="password_plain" id="password_plain">
-                </div>
-                <div id="boton_login">
-                    <ul>
-                        <li class="click horizontal " onclick="enviar(); return(false);" style="width:10ex" title="Entrar">     
-                            <div class="boton_entrar"></div>    
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+<div class="container span100 no-margin">
+	[% IF mensaje %]
+	    <div class="alert [% class_mensaje %]">
+	        <strong>[[% 'Informaci&oacute;n' | i18n %]]</strong> [% mensaje %]
+	    </div>
+	[% END %]
+    
+	<div id="content" class="login-form">
+		<div class="page-header">
+		    <h1>MERAN <small>[% 'Ingresar a Intranet' | i18n %]</small></h1>
+		</div>		
+		<div class="form-horizontal" id="login-form">
+		    <fieldset>
+	            <div class="control-group">
+	                <label class="control-label" for="username">[% 'Usuario' | i18n %]</label>
+	                <div class="controls">
+	                  <input type="text" class="input-xlarge" id="username" name="username"">
+	                  <p class="help-block">[% 'Conocido tambi&eacute;n como Tarjeta de Identificaci&oacute;n' | i18n %]</p>
+	                </div>
+	            </div>
+	            <div class="control-group">
+	                <label class="control-label" for="username">[% 'Contrase&ntilde;a' | i18n %]</label>
+	                <div class="controls">
+	                  <input type="password" class="input-xlarge" id="password_plain" name="password_plain">
+	                </div>
+	            </div>
+		    </fieldset>
+		
+			<div class="form-actions">
+			    <button type="submit" class="btn btn-primary" onclick="enviar();">[% 'Iniciar sesi&oacute;n' | i18n %]</button>
+			</div>	
+		</div> 
+	</div><!-- content -->
 
 
     <form action='[% url_prefix %]/mainpage.pl' method="post" name="datosAEnviar" id="datosAEnviar">
@@ -97,3 +108,6 @@
                 [% END %]
         </form>
 </div>
+
+
+
