--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/settings.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/settings.tmpl
@@ -15,14 +15,14 @@
 	            [% "Perfil de " | i18n %][% socio_data.usr_nro_socio %] ([% socio_data.usr_apellido %], [% socio_data.usr_nombre %])
 	          </legend>
 	          <div class="control-group">
-	              <label for="languages">[% "Idioma" | i18n %]</label>
+	              <label class="control-label" for="languages">[% "Idioma" | i18n %]</label>
 	              <div class="controls">
 	                  [% languages %]
                       <p class="help-block">[% "Idioma en que se ver&aacute; Meran " | i18n %]</p>	                  
 	              </div>
 	           </div>
 	           <div class="control-group">
-		           <label for="email">[% "E-mail" | i18n %]</label>
+		           <label class="control-label" for="email">[% "E-mail" | i18n %]</label>
 		           <div class="controls">
 			            <div class="input-prepend">
 			              <span class="add-on"><i class="icon-envelope"></i></span>
