--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/intranet.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/intranet.css
@@ -573,8 +573,12 @@ body {
   margin-left: -290px
   }
 
+.padding_nav{
+    padding-top: 40px;
+}
 
-/*.center-section-form form{
+.center-section-form form{
     margin: 0 auto;
-}*/
+    width: 800px;
+}
 
