--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/buscarUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/buscarUsuario.tmpl
@@ -16,7 +16,7 @@ $(document).ready(function() {
 <fieldset>
     <!--<legend>[% "B&uacute;squeda de Usuarios Reales" | i18n %]</legend>-->
    
-    <section class="center-section-form">
+    <section class="">
 
       [% PERL %]
           print C4::AR::Filtros::tabbedPane(    titulo    => "",
