--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/estructuraCatalo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/estructuraCatalo.tmpl
@@ -137,8 +137,8 @@ function mostrarModificarCampo(id){
 
 function updateMostrarModificarCampo(responseText){
     inicializar();
-    $("#resultModificarCampo").show();
     $("#resultModificarCampo").html(responseText);
+    $("#resultModificarCampo").modal();
     scrollTo('resultModificarCampo');
 
 //     enable_disableSelects();
@@ -510,6 +510,7 @@ function modificarEstructuraCatalogacion(id){
 }
 
 function updateModificarEstructuraCatalogacion(responseText){
+	$("#resultModificarCampo").modal();
     var Messages = JSONstring.toObject(responseText);
     setMessages(Messages);
     if (! (hayError(Messages) ) ){
@@ -526,38 +527,40 @@ function updateModificarEstructuraCatalogacion(responseText){
 
 <div class="title">Configuraci&oacute;n del formulario de carga</div>
 
-<form class="form-horizontal">
-    <fieldset>
-    <legend>[% "Seleccione el nivel:" | i18n %]</legend>
-    <section class="center-section-form">
-    <div class="control-group">
-        <label class="control-label" for="niveles_id"> [% "Nivel" | i18n %]: </label>
-        <div class="controls">
-            [% selectNivel %]
+<section class="center-section-form">
+	<form class="form-horizontal">
+	    <fieldset>
+		    <legend>[% "Seleccione el nivel:" | i18n %]</legend>
+		    <div class="control-group">
+		        <label class="control-label" for="tipo_nivel3_id"> [% "Esquema" | i18n %]: </label>
+		        <div class="controls">
+		            [% selectItemType %]
+		        </div>
+		    </div>
+
+            <div class="control-group">
+                <label class="control-label" for="niveles_id"> [% "Nivel" | i18n %]: </label>
+                <div class="controls">
+                    [% selectNivel %]
+                </div>
+            </div>
             
-            [% PERL %]
-                    print C4::AR::Filtros::to_Icon(   
-                                                        boton   => "icon_buscar",
-                                                        onClick => "eleccionDeNivel();",
-                                                        title   => "[% 'Buscar' | i18n %]",
-                            ) ;
-            [% END %]
-            
-        </div>
-    </div>
-    
-    <div class="control-group">
-        <label class="control-label" for="tipo_nivel3_id"> [% "Esquema" | i18n %]: </label>
-        <div class="controls">
-            [% selectItemType %]
-        </div>
-    </div>
-    </section>
-</fieldset>
-</form>
+            <div class="form-actions">
+                    [% PERL %]
+                            print C4::AR::Filtros::action_button(   
+                                                                button   => "btn btn-primary",
+                                                                action  => "eleccionDeNivel();",
+                                                                title   => "[% 'Buscar' | i18n %]",
+                                    ) ;
+                    [% END %]
+            </div>
+
+	    </fieldset>
+	</form>
+</section>
 
 <!-- PARA MOSTRAR TEMPLATE PARA MODIFICAR CAMPOS -->
-<div id= "resultModificarCampo"></div>
+<div id="resultModificarCampo" class="modal hide fade"></div>
 <!-- PARA MOSTRAR TEMPLATE PARA AGREGAR CAMPOS -->
 <div id= "resultAgregarCampo"></div>
 <!-- PARA MOSTRAR LO CATALOGADO -->
