--- a/intranet/htdocs/intranet-tmpl/usuarios/potenciales/buscarUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/potenciales/buscarUsuario.tmpl
@@ -133,9 +133,7 @@ $(document).ready(function() {
 <!--<div class="titulos">[% "B&uacute;squeda de Usuarios Potenciales" | i18n %]</div>-->
 <fieldset>
     <!--<legend class="titulo_legend">[% "B&uacute;squeda de Usuarios Potenciales" | i18n %]</legend>-->
-      <p id="msj" style="font-size:12pt; color:red"></p>
-
-      <section class="center-section-form">
+      <section class="">
 
               [% PERL %]
                   print C4::AR::Filtros::tabbedPane(    titulo    => "",
