--- a/intranet/htdocs/intranet-tmpl/catalogacion/tablasReferencia/tablasReferencia.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/tablasReferencia/tablasReferencia.tmpl
@@ -14,10 +14,7 @@ function obtenerTabla(){
 
 function updateObtenerTabla(responseText){
     $('#detalle_tabla').html(responseText);
-    zebra('detalle_tabla');
-
 }
-
 </script>
 
 <div class="permisos">
@@ -33,15 +30,17 @@ function updateObtenerTabla(responseText){
                 </div>
                 
                 <div class="form-actions">
-
+  
                     [% PERL %]
-                        print C4::AR::Filtros::to_Button(   text    => "[% 'Obtener Tabla' | i18n %]",
-                                                            boton   => "btn btn-primary",
-                                                            onClick => "obtenerTabla();",
-                                                            title   => "[% 'Obtener Tabla' | i18n %]",
-                                                            inline  => "1"
-                                ) ;
+                          print C4::AR::Filtros::action_button( 
+                                                          button    => "btn btn-primary",
+                                                          action    => "obtenerTabla()", 
+                                                          title     => "[% 'Obtener Tabla' | i18n %]",
+                                                      ) ;
+
+
                     [% END %]
+                    
                 </div>
             </div>
         </fieldset>
