--- a/intranet/htdocs/intranet-tmpl/catalogacion/tablasReferencia/detalle_tabla.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/tablasReferencia/detalle_tabla.tmpl
@@ -30,15 +30,18 @@ function updateCambiarVisualizacion(){
 }
 </script>
 <div class="datos_tabla_div" id="datos_tabla_div">
-    <table id="tablaResult" class="table table-striped">
-        <thead>
-            <tr class="titulo_tabla_resultado">
-                <th>[% "Campo" | i18n %]</th>
-                <th>[% "Visible" | i18n %]</th>
-                <th>[% "Nombre" | i18n %]</th>
-                <th>[% "Cambiar Visivilidad" | i18n %]</th>
-            </tr>
-        </thead>
+
+        [% PERL %]
+            print C4::AR::Filtros::tableHeader(   
+                      id              => "tablaResult",
+                      columns         => ['[% "Campo"|i18n %]','[% "Visible"|i18n %]',
+                                            '[% "Nombre"|i18n %]', '[% "Cambiar Visivilidad"|i18n %]',
+                                         ]
+
+                                                    
+                        ) ;
+        [% END %]
+
         <tbody>
             [% FOREACH dato IN data %]
             <tr>
@@ -49,14 +52,17 @@ function updateCambiarVisualizacion(){
                 <td class="edit_nombre" id="[% dato.getCampo %],[% dato.getTabla %]">[% dato.getCampoAlias %]</td>
                 
                 <td>
-                [% PERL %]
-                            print C4::AR::Filtros::to_Icon(    
-                                            boton   => "icon_edicion",
-                                            onClick => "cambiarVisibilidad('[% dato.getCampo %]','[% dato.getTabla %]');",
-                                            title   => "[% 'Modificar Visivilidad' | i18n %]",
-                                            alternClass => "botonCentradoTabla"
-                                    ) ;
-                [% END %]
+                
+                    [% PERL %]
+                          print C4::AR::Filtros::action_button( 
+                                                          button    => "btn btn-primary",
+                                                          action    => 'cambiarVisibilidad("[% dato.getCampo %]","[% dato.getTabla %]");', 
+                                                          icon      => "icon-edit icon-white",
+                                                      ) ;
+
+
+                    [% END %]
+                
                 </td>
             </tr>
             [% END %]
